base do blog ok, falta lógica de pesquisa/filtro

--- a/src/blog-page-2.html
+++ b/src/blog-page-2.html
@@ -97,101 +97,101 @@
             <div class="blog-news-left">
               <div class="news-left first-news-page">
                 <a href="">
-                  <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
-                <h3>COVID-19: A Importância da saúde bucal no fortalecimento da imunidade</h3>
+                  <img src="./resources/img/Coroas-de-Porcelana-Vila-Olímpia (1).jpg" alt="">
+                <h3>Próteses protocolo e implantes: da saúde ao resgate da autoestima</h3>
               </a>
-                <p class="date-news-left">06/07/2020</p>
-                <p class="text-news-left">Nos últimos meses, com a chegada do coronavírus, ficou ainda mais evidente a importância de manter hábitos de higiene para se proteger de doenças. Entretanto, a higiene bucal também deve ser reforçada, pois a boca é uma das principais vias de contaminação. Manter a saúde bucal adequada, contribui no aumento da resistência ao vírus, evitando…</p>
+                <p class="date-news-left">12/03/2019</p>
+                <p class="text-news-left">Cansados de limitações, como dificuldades na mastigação e fala, os portadores de dentadura e prótese removível buscam soluções confortáveis, seguras e que, por fim, resgatem a autoestima. Dados do Instituto Brasileiro de Geografia e Estatística (IBGE) mostram um grande crescimento do número de idosos no Brasil entre 2012 e 2017, um salto de 19,5%. E…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-3-1024x576.jpg" alt="">
-                <h3>Dente do siso: mitos e verdades</h3>
+                  <img src="./resources/img/clareamento.jpg" alt="">
+                <h3>7 mitos e verdades do clareamento dental</h3>
               </a>
-                <p class="date-news-left">09/03/2020</p>
-                <p class="text-news-left">Temidos por muitos pacientes, os terceiros molares provocam muitas dúvidas. Também conhecidos como dentes do siso, eles são os últimos dentes a nascerem e, geralmente, erupcionam entre o final da adolescência e início da vida adulta. Com o objetivo de esclarecer todas as questões relacionadas aos terceiros molares, a A Clínica Oral debate os mitos…</p>
+                <p class="date-news-left">12/02/2019</p>
+                <p class="text-news-left">A união de um sorriso lindo e saudável faz com que muitos busquem alternativas rápidas e eficazes para os cuidados com os dentes. Prova disso é o sucesso do tratamento com alinhadores que substituem os braquetes e também do processo de clareamento, que devolve a tonalidade mais clara aos dentes. Foi mais ou menos assim…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
+                  <img src="./resources/img/bruxismo.jpg" alt="">
+                <h3>Bruxismo: combata o problema!</h3>
               </a>
-                <p class="date-news-left">24/02/2020</p>
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio?  Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos…</p>
+                <p class="date-news-left">07/01/2019</p>
+                <p class="text-news-left">Você já se pegou apertando ou rangendo os dentes, as vezes até durante o dia? Já reclamaram que você faz muito barulho com os dentes quando está dormindo? Se sua resposta for sim para pelo menos uma dessas perguntas, você pode ter bruxismo. O bruxismo é uma desordem funcional que envolve ranger ou apertar dos…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
-                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>10 cuidados com a saúde bucal na terceira idade</h3>
               </a>
-                <p class="date-news-left">12/02/2020</p>
-                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.  De acordo com dados do Instituto Nacional de Câncer (INCA), o…</p>
+                <p class="date-news-left">03/12/2018</p>
+                <p class="text-news-left">Com o passar dos anos, alguns cuidados com a saúde devem ser intensificados, em especial com a saúde bucal. Na terceira idade, redobrar a atenção com a higiene bucal, alimentação e intensificar as visitas ao dentista garante qualidade de vida e bem-estar. De acordo com a Organização Mundial da Saúde (OMS), o número de pessoas…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Capa-Alinde.jpg" alt="">
-                <h3>Diabetes e saúde bucal: dúvidas comuns</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>6 motivos para fazer o check-up odontológico</h3>
               </a>
-                <p class="date-news-left">12/11/2019</p>
-                <p class="text-news-left">A atenção com a saúde bucal deve ser prioridade na vida de qualquer pessoa, mas precisa ser redobrada em pacientes com diabetes, pois os altos níveis de glicose na saliva contribuem para a proliferação de bactérias bucais. De acordo com a Organização Mundial da Saúde (OMS), mais de 422 milhões de pessoas no mundo têm…</p>
+                <p class="date-news-left">04/09/2018</p>
+                <p class="text-news-left">Não é à toa que dizem que o sorriso é a curva mais bonita do corpo de qualquer pessoa, afinal, um singelo sorriso tem o poder de combater a ansiedade, depressão e estresse, diminuir a pressão arterial, desintoxicar o organismo e deixar a pele mais vistosa e bonita. Outros tantos dizem que este é nosso…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/biocorrosão.jpg" alt="">
-                <h3>Biocorrosão: como hábitos e estilo de vida impactam a saúde bucal</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>6 mitos e verdades sobre cáries</h3>
               </a>
-                <p class="date-news-left">01/11/2019</p>
-                <p class="text-news-left">A cárie é uma velha conhecida dos pacientes mas não são elas que têm chamado a atenção dos dentistas e sim as Lesões Cervicais Não Cariosas (LCNC).  As LCNCs são caracterizadas pela perda de estrutura dental próxima à gengiva e retração gengival provocando a hipersensibilidade dentária. Entre os tipos de Lesões Cervicais Não Cariosas está…</p>
+                <p class="date-news-left">28/08/2018</p>
+                <p class="text-news-left">Você sabia que, de acordo com um levantamento nacional do Ministério a Saúde, em 2010, cerca de 44% das crianças de 12 anos estavam livres das cáries? A notícia é ótima, mas não podemos relaxar na prevenção e combate do problema bucal mais comum entre adultos e crianças. Como quem não quer nada, o resto…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Periodontite.jpg" alt="">
-                <h3>Periodontite: como prevenir a doença bucal mais comum do mundo?</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Qualquer paciente pode realizar o clareamento dental?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Gosto ruim na boca, mau hálito persistente, sensibilidade dentária e sangramento durante a escovação ou uso do fio dental. Esses são alguns sintomas comuns da doença periodontal também conhecida como periodontite. Caracterizada pela inflamação e destruição dos tecidos de proteção (gengiva) e suporte (osso, cemento e ligamento periodontal) dos dentes, a doença periodontal pode…</p>
+                <p class="date-news-left">23/03/2018</p>
+                <p class="text-news-left">O desejo por um sorriso mais branco é comum entre a maioria das pessoas. Assim, o clareamento dental é um procedimento que ficou bastante popular. É um dos procedimentos mais procurados pelos pacientes a fim de deixar o sorriso mais branco, harmônico e com brilho. Contudo, será que basta o desejo para realizar um clareamento dental…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Halitose.jpg" alt="">
-                <h3>Mau hálito: da prevenção ao tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Avulsão dentária: o que fazer?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de vergonha para muitos, todas as pessoas são afetadas pela halitose matinal, pois durante à noite há uma diminuição do fluxo salivar. De acordo com a Associação Brasileira de Halitose (ABHA), para 30% da população, a halitose, nome correto da disfunção, é uma realidade.…</p>
+                <p class="date-news-left">05/03/2018</p>
+                <p class="text-news-left">Ser criança é achar que o mundo é feito de fantasias, sorrisos e brincadeiras. Ser criança é olhar e não ver o perigo.. Traumas bucais e/ou dentários são muito comuns em crianças, principalmente na primeira infância (0 a 3 anos), pois essa é uma fase de aprender e explorar o ambiente. Um dente que foi…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
                   <img src="./resources/img/Invisalign-1024x419.jpg" alt="">
-                <h3>Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</h3>
+                <h3>O aparelho Invisalign realmente funciona?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Tratamento Invisalign alia conforto e estética Braquetes, fios, elásticos… A boa nova é que você não precisa mais enfrentar o sorriso metálico para alcançar o sorriso dos sonhos. A tecnologia dos alinhadores transparentes é uma forma praticamente invisível de corrigir os dentes por meio da união de uma tecnologia 3D, os alinhadores feitos sob…</p>
+                <p class="date-news-left">21/02/2018</p>
+                <p class="text-news-left">Um dos maiores questionamentos no dia a dia clínico é em relação à efetividade do aparelho ortodôntico Invisalign. Muitos pacientes duvidam que o material, para além da estética, seja realmente eficaz. O que muitos não sabem é que a empresa responsável pela confecção do Invisalign, a Align Technology, é atualmente uma das empresas que…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Guia-Básico-da-Saúde-Bucal.jpg" alt="">
-                <h3>Guia básico de saúde bucal : dicas para toda família</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>A Clinica Oral recebe título Diamond Invisalign Provider</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Pequenos cuidados do dia a dia fazem a diferença no sorriso Quantas vezes ao dia você escova os dentes? E o fio dental, você usa com qual frequência? Qual foi a última vez que você trocou sua escova dental? Você tem escovado os dentes de forma correta? Como vai a saúde bucal da família?…</p>
+                <p class="date-news-left">29/01/2018</p>
+                <p class="text-news-left">O tratamento ortodôntico com os alinhadores Invisalign® é considerado um dos mais modernos disponíveis no mercado. Ele foi criado com a intenção de ser uma alternativa para aqueles que não querem abrir mão de um sorriso mais bonito, mas precisam manter a estética preservada. O que faz com que pacientes busquem o tratamento Invisalign® como alternativa são…</p>
                 <a href="">Read More >></a>
               </div>
 
@@ -232,12 +232,15 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
+              <a href="" class="seta-left-page">
+                <i class="fa fa-angle-left"></i>
+              </a>
               <ul>
                 <li>
-                  <a href="" class="active-page-post">1</a>
+                  <a href="">1</a>
                 </li>
                 <li>
-                  <a href="">2</a>
+                  <a href="" class="active-page-post">2</a>
                 </li>
                 <li>
                   <a href="">3</a>
