--- a/src/blog-page-3.html
+++ b/src/blog-page-3.html
@@ -97,104 +97,103 @@
             <div class="blog-news-left">
               <div class="news-left first-news-page">
                 <a href="">
-                  <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
-                <h3>COVID-19: A Importância da saúde bucal no fortalecimento da imunidade</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>A questão é cultural</h3>
               </a>
-                <p class="date-news-left">06/07/2020</p>
-                <p class="text-news-left">Nos últimos meses, com a chegada do coronavírus, ficou ainda mais evidente a importância de manter hábitos de higiene para se proteger de doenças. Entretanto, a higiene bucal também deve ser reforçada, pois a boca é uma das principais vias de contaminação. Manter a saúde bucal adequada, contribui no aumento da resistência ao vírus, evitando…</p>
+                <p class="date-news-left">08/01/2018</p>
+                <p class="text-news-left">Hoje 20% dos dentistas do mundo estão no Brasil. Temos mais dentistas do que os EUA e o Canadá juntos. Isso deveria caracterizar o país com o maior índice de saúde bucal do mundo porém infelizmente esse não é nosso caso. 57% dos dentistas brasileiros, que hoje são mais de 250 mil, estão na região Sudeste.…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-3-1024x576.jpg" alt="">
-                <h3>Dente do siso: mitos e verdades</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Você sabe o que é linha alba?</h3>
               </a>
-                <p class="date-news-left">09/03/2020</p>
-                <p class="text-news-left">Temidos por muitos pacientes, os terceiros molares provocam muitas dúvidas. Também conhecidos como dentes do siso, eles são os últimos dentes a nascerem e, geralmente, erupcionam entre o final da adolescência e início da vida adulta. Com o objetivo de esclarecer todas as questões relacionadas aos terceiros molares, a A Clínica Oral debate os mitos…</p>
+                <p class="date-news-left">11/12/2017</p>
+                <p class="text-news-left">A linha alba é uma elevação linear e esbranquiçada na bochecha de forma bilateral e assintomática. Essa linha acompanha a linha do encontro entre os dentes superiores e inferiores. Ao realizarmos o fechamento da boca, a pressão e a sucção fazem com que as bochechas fiquem, em contato direto com os dentes. Com isso, ao…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Estética do sorriso: lentes de contato e facetas em porcelana</h3>
               </a>
-                <p class="date-news-left">24/02/2020</p>
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio?  Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos…</p>
+                <p class="date-news-left">07/11/2017</p>
+                <p class="text-news-left">As lentes de contato e as facetas em porcelana  têm sido cada vez mais procuradas pelos pacientes nos consultórios, já sendo a técnica preferida dos famosos. O procedimento é feito por um profissional da área da Dentística ou Prótese Dentária e consiste na colocação de pequenas lâminas de porcelana na frente dos dentes que pode mudar…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
-                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Invisalign – Diferenças em Relação ao Aparelho Convencional</h3>
               </a>
-                <p class="date-news-left">12/02/2020</p>
-                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.  De acordo com dados do Instituto Nacional de Câncer (INCA), o…</p>
+                <p class="date-news-left">31/10/2017</p>
+                <p class="text-news-left">A escolha do aparelho dental pode ser um problema para aqueles que pretendem ou estão a poucos momentos de começar seu tratamento dental. Existem diversos fatores a serem considerados antes de optar por um aparelho ortodôntico, e isso varia de acordo com as necessidades e preferências de cada um. Tanto o aparelho do tipo Invisalign…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Capa-Alinde.jpg" alt="">
-                <h3>Diabetes e saúde bucal: dúvidas comuns</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Ortodontia Preventiva</h3>
               </a>
-                <p class="date-news-left">12/11/2019</p>
-                <p class="text-news-left">A atenção com a saúde bucal deve ser prioridade na vida de qualquer pessoa, mas precisa ser redobrada em pacientes com diabetes, pois os altos níveis de glicose na saliva contribuem para a proliferação de bactérias bucais. De acordo com a Organização Mundial da Saúde (OMS), mais de 422 milhões de pessoas no mundo têm…</p>
+                <p class="date-news-left">15/09/2017</p>
+                <p class="text-news-left">Ortodontia é o ramo da odontologia que cuida da prevenção, interceptação e correção das maloclusões dentárias (irregularidades dos dentes),  isto é, estuda os posicionamentos funcionais e estéticos incorretos e os contatos dos dentes entre si ou com a arcada dentária oposta que podem ser conseqüência de um desenvolvimento inadequado, perda de dentes ou crescimento anormal…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/biocorrosão.jpg" alt="">
-                <h3>Biocorrosão: como hábitos e estilo de vida impactam a saúde bucal</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Por que devemos visitar o dentista a cada 6 meses</h3>
               </a>
-                <p class="date-news-left">01/11/2019</p>
-                <p class="text-news-left">A cárie é uma velha conhecida dos pacientes mas não são elas que têm chamado a atenção dos dentistas e sim as Lesões Cervicais Não Cariosas (LCNC).  As LCNCs são caracterizadas pela perda de estrutura dental próxima à gengiva e retração gengival provocando a hipersensibilidade dentária. Entre os tipos de Lesões Cervicais Não Cariosas está…</p>
+                <p class="date-news-left">07/08/2017</p>
+                <p class="text-news-left">O flúor é fundamental para quem quer cuidar da saúde bucal.  Esse mineral está presente desde a água em que bebemos até  cremes dentais que utilizamos na escovação do dia a dia. Mas então, por que devo visitar o dentista a cada 6 meses? Pesquisas demonstraram que o flúor não somente reduz a cárie nos…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Periodontite.jpg" alt="">
-                <h3>Periodontite: como prevenir a doença bucal mais comum do mundo?</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Aparelho Auto-Ligado</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Gosto ruim na boca, mau hálito persistente, sensibilidade dentária e sangramento durante a escovação ou uso do fio dental. Esses são alguns sintomas comuns da doença periodontal também conhecida como periodontite. Caracterizada pela inflamação e destruição dos tecidos de proteção (gengiva) e suporte (osso, cemento e ligamento periodontal) dos dentes, a doença periodontal pode…</p>
+                <p class="date-news-left">16/07/2017</p>
+                <p class="text-news-left">Aparelhos ortodônticos autoligados são uma evolução do aparelho convencional, com algumas vantagens. Eles possuem como principal característica a baixa fricção entre os arcos ortodônticos e braquetes durante o tratamento, facilitando o início do movimento dentário pela diminuição da resistência inicial à movimentação. Nos aparelhos ortodônticos autoligados, não há a necessidade do uso das ligaduras elásticas,…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Halitose.jpg" alt="">
-                <h3>Mau hálito: da prevenção ao tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Por quanto tempo devo utilizar a contenção ortodôntica?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de vergonha para muitos, todas as pessoas são afetadas pela halitose matinal, pois durante à noite há uma diminuição do fluxo salivar. De acordo com a Associação Brasileira de Halitose (ABHA), para 30% da população, a halitose, nome correto da disfunção, é uma realidade.…</p>
+                <p class="date-news-left">29/06/2017</p>
+                <p class="text-news-left">Ao contrário do que muitos pensam, o tratamento ortodôntico não é finalizado com a retirada do aparelho ortodôntico fixo. Seu sucesso depende, em grande parte, do uso de aparelhos de contenção que, como o próprio nome diz, são utilizados para manter os dentes na sua posição final. Os dentes possuem fibras colágenas que produzem…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
                   <img src="./resources/img/Invisalign-1024x419.jpg" alt="">
-                <h3>Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</h3>
+                <h3>O que são células-tronco?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Tratamento Invisalign alia conforto e estética Braquetes, fios, elásticos… A boa nova é que você não precisa mais enfrentar o sorriso metálico para alcançar o sorriso dos sonhos. A tecnologia dos alinhadores transparentes é uma forma praticamente invisível de corrigir os dentes por meio da união de uma tecnologia 3D, os alinhadores feitos sob…</p>
+                <p class="date-news-left">20/06/2017</p>
+                <p class="text-news-left">As células-tronco são células que podem se transformar, sob condições adequadas, em outros tipos de células. São células capazes de regenerar órgãos e tecidos lesionados, promovendo a recuperação dos mesmos. A extração, multiplicação e preservação são a única forma de garantir que elas poderão ser usadas no futuro, em caso de necessidade. Portanto, quanto mais…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Guia-Básico-da-Saúde-Bucal.jpg" alt="">
-                <h3>Guia básico de saúde bucal : dicas para toda família</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Pré-Natal Odontológico</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Pequenos cuidados do dia a dia fazem a diferença no sorriso Quantas vezes ao dia você escova os dentes? E o fio dental, você usa com qual frequência? Qual foi a última vez que você trocou sua escova dental? Você tem escovado os dentes de forma correta? Como vai a saúde bucal da família?…</p>
+                <p class="date-news-left">22/05/2017</p>
+                <p class="text-news-left">A existência de crenças populares sobre a saúde bucal da gestante é relatada por vários autores. Entre as mais comuns estão as de que o bebê retira cálcio dos dentes da mãe, mulheres grávidas não podem tomar anestesia de dentista ou realizar tomadas radiográficas, ou ainda de que gestantes não podem ser submetidas ao tratamento…</p>
                 <a href="">Read More >></a>
               </div>
-
 
             </div>
             <div class="blog-news-right">
@@ -232,15 +231,18 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
+              <a href="" class="seta-left-page">
+                <i class="fa fa-angle-left"></i>
+              </a>
               <ul>
                 <li>
-                  <a href="" class="active-page-post">1</a>
+                  <a href="">1</a>
                 </li>
                 <li>
                   <a href="">2</a>
                 </li>
                 <li>
-                  <a href="">3</a>
+                  <a href="" class="active-page-post">3</a>
                 </li>
                 <li>
                   <a href="">4</a>
