--- a/src/blog-page-4.html
+++ b/src/blog-page-4.html
@@ -97,104 +97,103 @@
             <div class="blog-news-left">
               <div class="news-left first-news-page">
                 <a href="">
-                  <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
-                <h3>COVID-19: A Importância da saúde bucal no fortalecimento da imunidade</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Cuidados durante e após o Clareamento Dental</h3>
               </a>
-                <p class="date-news-left">06/07/2020</p>
-                <p class="text-news-left">Nos últimos meses, com a chegada do coronavírus, ficou ainda mais evidente a importância de manter hábitos de higiene para se proteger de doenças. Entretanto, a higiene bucal também deve ser reforçada, pois a boca é uma das principais vias de contaminação. Manter a saúde bucal adequada, contribui no aumento da resistência ao vírus, evitando…</p>
+                <p class="date-news-left">04/05/2017</p>
+                <p class="text-news-left">O clareamento dental tem sido realizado com mais frequência, a cada dia. A procura pela estética e harmonização facial é vasta e o acesso ao tratamento, também. O procedimento pode ser executado, basicamente, de duas formas: no consultório, pelo dentista; ou em casa, realizado pelo paciente sob orientação do profissional. Os métodos diferem em tempo…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-3-1024x576.jpg" alt="">
-                <h3>Dente do siso: mitos e verdades</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Renata Banhara, bactérias e os clichês que fazem parte de sua rotina</h3>
               </a>
-                <p class="date-news-left">09/03/2020</p>
-                <p class="text-news-left">Temidos por muitos pacientes, os terceiros molares provocam muitas dúvidas. Também conhecidos como dentes do siso, eles são os últimos dentes a nascerem e, geralmente, erupcionam entre o final da adolescência e início da vida adulta. Com o objetivo de esclarecer todas as questões relacionadas aos terceiros molares, a A Clínica Oral debate os mitos…</p>
+                <p class="date-news-left">26/04/2017</p>
+                <p class="text-news-left">Sua saúde começa pela boca. Nada criativo, não é mesmo? É quase uma chatice. Todo mundo fala, da sua mãe ao seu dentista. Essa frase, tão batida, revela uma verdade sobre saúde e cultura que muitas vezes subestimamos… Lembra aquele dia que, cansado, você foi dormir pensando que seria somente um dia sem escovar…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Gengiva sangrando ao passar fio dental – sinal de alerta!</h3>
               </a>
-                <p class="date-news-left">24/02/2020</p>
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio?  Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos…</p>
+                <p class="date-news-left">17/04/2017</p>
+                <p class="text-news-left">Sangramento pelo uso do fio dental pode ser um sinal de alerta para a gengivite, o estágio inicial da doença periodontal. Se não tratada, a gengivite pode progredir para estágios mais avançados, como uma periodontite, que pode causar um dano permanente aos tecidos de suporte do dente. Quanto mais cedo a doença for diagnosticada, maior…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
-                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Cárie dentária – uma doença contagiosa</h3>
               </a>
-                <p class="date-news-left">12/02/2020</p>
-                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.  De acordo com dados do Instituto Nacional de Câncer (INCA), o…</p>
+                <p class="date-news-left">09/04/2017</p>
+                <p class="text-news-left">Pouca gente sabe, mas a cárie dentária é uma doença infecto-contagiosa. Ela é causada pela bactéria Streptococcus Mutans, que adere aos dentes e se “alimenta” das partículas que sobraram da última refeição. Uma das formas de transmissão ocorre quando a mãe experimenta a comida do filho para ver se está muito quente. A transmissão…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Capa-Alinde.jpg" alt="">
-                <h3>Diabetes e saúde bucal: dúvidas comuns</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Como posso melhorar do herpes labial?</h3>
               </a>
-                <p class="date-news-left">12/11/2019</p>
-                <p class="text-news-left">A atenção com a saúde bucal deve ser prioridade na vida de qualquer pessoa, mas precisa ser redobrada em pacientes com diabetes, pois os altos níveis de glicose na saliva contribuem para a proliferação de bactérias bucais. De acordo com a Organização Mundial da Saúde (OMS), mais de 422 milhões de pessoas no mundo têm…</p>
+                <p class="date-news-left">17/03/2017</p>
+                <p class="text-news-left">O herpes labial é uma infecção viral e contagiosa nos lábios, na boca ou nas gengivas causada pelo vírus da herpes simples. A transmissão deste vírus pode ocorrer por meio de contato íntimo ou por meio do compartilhamento de objetos como toalhas, louças e outros itens que estejam infectados. Geralmente esse contato ocorre na…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/biocorrosão.jpg" alt="">
-                <h3>Biocorrosão: como hábitos e estilo de vida impactam a saúde bucal</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Meu dente precisa ser tratado com microscópio?!</h3>
               </a>
-                <p class="date-news-left">01/11/2019</p>
-                <p class="text-news-left">A cárie é uma velha conhecida dos pacientes mas não são elas que têm chamado a atenção dos dentistas e sim as Lesões Cervicais Não Cariosas (LCNC).  As LCNCs são caracterizadas pela perda de estrutura dental próxima à gengiva e retração gengival provocando a hipersensibilidade dentária. Entre os tipos de Lesões Cervicais Não Cariosas está…</p>
+                <p class="date-news-left">04/03/2017</p>
+                <p class="text-news-left">O microscópio operatório é uma ferramenta utilizada por diversas áreas, tanto na medicina quanto na odontologia. Mas para que serve um microscópio? Ele tem a função de aumentar a capacidade visual do profissional, além de melhorar a iluminação e ergonomia do dentista. Com equipamentos específicos, também é possível compartilhar as imagens tanto por…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Periodontite.jpg" alt="">
-                <h3>Periodontite: como prevenir a doença bucal mais comum do mundo?</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Como prevenir a gengivite</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Gosto ruim na boca, mau hálito persistente, sensibilidade dentária e sangramento durante a escovação ou uso do fio dental. Esses são alguns sintomas comuns da doença periodontal também conhecida como periodontite. Caracterizada pela inflamação e destruição dos tecidos de proteção (gengiva) e suporte (osso, cemento e ligamento periodontal) dos dentes, a doença periodontal pode…</p>
+                <p class="date-news-left">20/02/2017</p>
+                <p class="text-news-left">A gengivite é uma inflamação da gengiva causada geralmente pela placa bacteriana, uma película viscosa e incolor de bactérias e restos alimentares que se forma nos dentes pela escovação deficiente ou pela falta do uso do fio dental. Esta placa produz toxinas que irritam a mucosa da gengiva, causando a gengivite. Outros fatores também podem levar à doença, como alterações…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Halitose.jpg" alt="">
-                <h3>Mau hálito: da prevenção ao tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Socorro, como lidar com este ronco?!</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de vergonha para muitos, todas as pessoas são afetadas pela halitose matinal, pois durante à noite há uma diminuição do fluxo salivar. De acordo com a Associação Brasileira de Halitose (ABHA), para 30% da população, a halitose, nome correto da disfunção, é uma realidade.…</p>
+                <p class="date-news-left">20/02/2017</p>
+                <p class="text-news-left">O ronco é bastante desagradável tanto para quem sofre com ele como para quem dorme ao lado. Ele pode ter diversas causas, cada uma necessitando de um tipo de tratamento. Qual a causa do ronco? O ronco é causado pela obstrução das vias aéreas superiores. Durante o sono, os músculos da garganta relaxam e ficam flácidos,…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Invisalign-1024x419.jpg" alt="">
-                <h3>Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Bichectomia, a cirurgia que pode mudar seu rosto</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Tratamento Invisalign alia conforto e estética Braquetes, fios, elásticos… A boa nova é que você não precisa mais enfrentar o sorriso metálico para alcançar o sorriso dos sonhos. A tecnologia dos alinhadores transparentes é uma forma praticamente invisível de corrigir os dentes por meio da união de uma tecnologia 3D, os alinhadores feitos sob…</p>
+                <p class="date-news-left">31/01/2017</p>
+                <p class="text-news-left">Conhecido como cirurgia das bochechas (cheek surgery), a bichectomia já é famosa nos EUA e tem sido feita em muitas celebridades. No Brasil, também vem se popularizando nos últimos 2 anos. Celebridades internacionais como Angelina Jolie e Megan Fox, que são conhecidas como ícones de beleza no mundo todo, já realizaram esse procedimento e,…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Guia-Básico-da-Saúde-Bucal.jpg" alt="">
-                <h3>Guia básico de saúde bucal : dicas para toda família</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>O que pode deixar seus dentes sensíveis?</h3>
               </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Pequenos cuidados do dia a dia fazem a diferença no sorriso Quantas vezes ao dia você escova os dentes? E o fio dental, você usa com qual frequência? Qual foi a última vez que você trocou sua escova dental? Você tem escovado os dentes de forma correta? Como vai a saúde bucal da família?…</p>
+                <p class="date-news-left">31/01/2017</p>
+                <p class="text-news-left">Embora muita gente não saiba, a sensibilidade dentária costuma ser decorrente de hábitos que praticamos sem perceber. A sensação desconfortável ocorre quando há exposição da dentina, região mais sensível conhecida como a ‘raiz do dente’. Além de doenças bucais, alguns hábitos podem contribuir para o desenvolvimento do problema. Veja quais são eles a seguir:…</p>
                 <a href="">Read More >></a>
               </div>
-
 
             </div>
             <div class="blog-news-right">
@@ -232,9 +231,12 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
+              <a href="" class="seta-left-page">
+                <i class="fa fa-angle-left"></i>
+              </a>
               <ul>
                 <li>
-                  <a href="" class="active-page-post">1</a>
+                  <a href="">1</a>
                 </li>
                 <li>
                   <a href="">2</a>
@@ -243,7 +245,7 @@
                   <a href="">3</a>
                 </li>
                 <li>
-                  <a href="">4</a>
+                  <a href="" class="active-page-post">4</a>
                 </li>
                 <li>
                   <a href="">5</a>
