--- a/src/blog-page-5.html
+++ b/src/blog-page-5.html
@@ -97,104 +97,33 @@
             <div class="blog-news-left">
               <div class="news-left first-news-page">
                 <a href="">
-                  <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
-                <h3>COVID-19: A Importância da saúde bucal no fortalecimento da imunidade</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>A importância do cálcio e vitamina D na saúde bucal</h3>
               </a>
-                <p class="date-news-left">06/07/2020</p>
-                <p class="text-news-left">Nos últimos meses, com a chegada do coronavírus, ficou ainda mais evidente a importância de manter hábitos de higiene para se proteger de doenças. Entretanto, a higiene bucal também deve ser reforçada, pois a boca é uma das principais vias de contaminação. Manter a saúde bucal adequada, contribui no aumento da resistência ao vírus, evitando…</p>
+                <p class="date-news-left">22/11/2016</p>
+                <p class="text-news-left">1.Por que a cálcio e a vitamina D fazem tão bem para a saúde bucal? O Cálcio é um nutriente importante para a saúde geral e bem estar, sendo considerado um mineral essencial para a saúde dos ossos, dentes e  gengivas. A vitamina D é uma vitamina essencial que promove a absorção e retenção…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-3-1024x576.jpg" alt="">
-                <h3>Dente do siso: mitos e verdades</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Protetor Bucal para Esportes</h3>
               </a>
-                <p class="date-news-left">09/03/2020</p>
-                <p class="text-news-left">Temidos por muitos pacientes, os terceiros molares provocam muitas dúvidas. Também conhecidos como dentes do siso, eles são os últimos dentes a nascerem e, geralmente, erupcionam entre o final da adolescência e início da vida adulta. Com o objetivo de esclarecer todas as questões relacionadas aos terceiros molares, a A Clínica Oral debate os mitos…</p>
+                <p class="date-news-left">22/11/2016</p>
+                <p class="text-news-left">O protetor bucal é um aparelho que se encaixa nos dentes para protegê-los contra qualquer tipo de impacto. Deve ser usado sempre que a pessoa participa de atividades esportivas que envolvam a possibilidade de quedas, contatos físicos bruscos, choques com objetos voadores, ou qualquer atividade que possa produzir ferimentos na área da boca. Segundo uma…</p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
-                  <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
+                  <!-- <img src="./resources/img/" alt=""> -->
+                <h3>Qual a melhor forma de higienizar a escova de dentes?</h3>
               </a>
-                <p class="date-news-left">24/02/2020</p>
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio?  Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos…</p>
+                <p class="date-news-left">22/11/2016</p>
+                <p class="text-news-left">1.Qual é a melhor forma de higienizar a escova de dente? Após a escovação, a escova deve ser bem lavada em água corrente, para retirar os resíduos de comida e creme dental. Retirar o excesso de água batendo o cabo da escova na pia. Não é recomendado enxugar a escova com toalha, pois elas também podem…</p>
                 <a href="">Read More >></a>
               </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
-                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
-              </a>
-                <p class="date-news-left">12/02/2020</p>
-                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.  De acordo com dados do Instituto Nacional de Câncer (INCA), o…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Capa-Alinde.jpg" alt="">
-                <h3>Diabetes e saúde bucal: dúvidas comuns</h3>
-              </a>
-                <p class="date-news-left">12/11/2019</p>
-                <p class="text-news-left">A atenção com a saúde bucal deve ser prioridade na vida de qualquer pessoa, mas precisa ser redobrada em pacientes com diabetes, pois os altos níveis de glicose na saliva contribuem para a proliferação de bactérias bucais. De acordo com a Organização Mundial da Saúde (OMS), mais de 422 milhões de pessoas no mundo têm…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/biocorrosão.jpg" alt="">
-                <h3>Biocorrosão: como hábitos e estilo de vida impactam a saúde bucal</h3>
-              </a>
-                <p class="date-news-left">01/11/2019</p>
-                <p class="text-news-left">A cárie é uma velha conhecida dos pacientes mas não são elas que têm chamado a atenção dos dentistas e sim as Lesões Cervicais Não Cariosas (LCNC).  As LCNCs são caracterizadas pela perda de estrutura dental próxima à gengiva e retração gengival provocando a hipersensibilidade dentária. Entre os tipos de Lesões Cervicais Não Cariosas está…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Periodontite.jpg" alt="">
-                <h3>Periodontite: como prevenir a doença bucal mais comum do mundo?</h3>
-              </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Gosto ruim na boca, mau hálito persistente, sensibilidade dentária e sangramento durante a escovação ou uso do fio dental. Esses são alguns sintomas comuns da doença periodontal também conhecida como periodontite. Caracterizada pela inflamação e destruição dos tecidos de proteção (gengiva) e suporte (osso, cemento e ligamento periodontal) dos dentes, a doença periodontal pode…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Halitose.jpg" alt="">
-                <h3>Mau hálito: da prevenção ao tratamento</h3>
-              </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de vergonha para muitos, todas as pessoas são afetadas pela halitose matinal, pois durante à noite há uma diminuição do fluxo salivar. De acordo com a Associação Brasileira de Halitose (ABHA), para 30% da população, a halitose, nome correto da disfunção, é uma realidade.…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Invisalign-1024x419.jpg" alt="">
-                <h3>Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</h3>
-              </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Tratamento Invisalign alia conforto e estética Braquetes, fios, elásticos… A boa nova é que você não precisa mais enfrentar o sorriso metálico para alcançar o sorriso dos sonhos. A tecnologia dos alinhadores transparentes é uma forma praticamente invisível de corrigir os dentes por meio da união de uma tecnologia 3D, os alinhadores feitos sob…</p>
-                <a href="">Read More >></a>
-              </div>
-
-              <div class="news-left">
-                <a href="">
-                  <img src="./resources/img/Guia-Básico-da-Saúde-Bucal.jpg" alt="">
-                <h3>Guia básico de saúde bucal : dicas para toda família</h3>
-              </a>
-                <p class="date-news-left">01/10/2019</p>
-                <p class="text-news-left">Pequenos cuidados do dia a dia fazem a diferença no sorriso Quantas vezes ao dia você escova os dentes? E o fio dental, você usa com qual frequência? Qual foi a última vez que você trocou sua escova dental? Você tem escovado os dentes de forma correta? Como vai a saúde bucal da família?…</p>
-                <a href="">Read More >></a>
-              </div>
-
 
             </div>
             <div class="blog-news-right">
@@ -232,9 +161,12 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
+              <a href="" class="seta-left-page">
+                <i class="fa fa-angle-left"></i>
+              </a>
               <ul>
                 <li>
-                  <a href="" class="active-page-post">1</a>
+                  <a href="">1</a>
                 </li>
                 <li>
                   <a href="">2</a>
@@ -246,12 +178,9 @@
                   <a href="">4</a>
                 </li>
                 <li>
-                  <a href="">5</a>
+                  <a href="" class="active-page-post">5</a>
                 </li>
               </ul>
-              <a href="" class="seta-right-page">
-                <i class="fa fa-angle-right"></i>
-              </a>
             </div>
           </div>
         </div>
